<resources>
    <string name="app_name">蘑菇助手</string>
    <string name="title_wenet">WENET</string>
    <string name="title_nwunet">NWUNET</string>
    <string name="title_score">成绩</string>
    <string name="name_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="remember_me">记住密码</string>
    <string name="forgent_me">忘记密码</string>
    <string name="create_account">注册账号</string>
    <string name="have_an_account">已有账号</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>


    <!-- 校园网登陆 -->
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登陆</string>
    <!--    <string name="remember_password">记住密码</string>-->
    <!--    <string name="remember_password">记住密码</string>-->
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>