<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wenet">

    <fragment
        android:id="@+id/navigation_wenet"
        android:name="com.cxk.nwuhelper.ui.wenet.WenetFragment"
        android:label="@string/title_wenet"
        tools:layout="@layout/fragment_wenet" />

    <fragment
        android:id="@+id/navigation_nwunet"
        android:name="com.cxk.nwuhelper.ui.nwunet.NwunetFragment"
        android:label="@string/title_nwunet"
        tools:layout="@layout/fragment_nwunet" />

    <fragment
        android:id="@+id/navigation_nwudoor"
        android:name="com.cxk.nwuhelper.ui.nwudoor.NwudoorFragment"
        android:label="@string/title_score"
        tools:layout="@layout/fragment_nwudoor" >
        <action
            android:id="@+id/action_navigation_nwudoor_to_scroeFragment"
            app:destination="@id/scroeFragment" />
    </fragment>
    <fragment
        android:id="@+id/scroeFragment"
        android:name="com.cxk.nwuhelper.ui.nwudoor.score.ScroeFragment"
        android:label="ScroeFragment"
        tools:layout="@layout/fragment_scroe"/>

</navigation>